@@ -2,6 +2,10 @@ Revision history for Perl extension Parallel::Forker
 
 The contributors that suggested a given feature are shown in [].
 	
+* Parallel::Forker 1.220 2007/2/2
+
+****	Add use_sig_child method, and accelerate poll.  [Darrell Bishop]
+
 * Parallel::Forker 1.214 2007/2/1
 
 ****    Fix hang in applications that call poll without sig_child.
@@ -49,7 +53,7 @@ The contributors that suggested a given feature are shown in [].
 **	First created
 
 ----------------------------------------------------------------------
-$Id: Changes 31189 2007-02-01 14:59:35Z wsnyder $
+$Id: Changes 31365 2007-02-02 21:13:24Z wsnyder $
 DESCRIPTION: Documentation on change history for this package
 ----------------------------------------------------------------------
 
